--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,8 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
-  
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
   </head>
 
   <body data-turbolinks="false">
@@ -21,9 +22,11 @@
       <%= render 'layouts/flash_messages' %>
 
       <%= yield %>
+      
     </div>
   <div class="footer">
     <p>© 2024 Tourist-Spots. All rights reserved.</p>
   </div>
   </body>
 </html>
+
