--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,9 +8,9 @@
   </div>
   <div class="mb-3 mt-5">
       <p>name：<%= @user.name %></p>
-      <p>enail：<%= @user.email %></p>
-      <a href="<%= edit_user_path(@user) %>" class="btn btn-primary">Edit</a>
-      <%= link_to 'Delete', user_path(@user), method: :delete, data: { confirm: 'Are you sure you want to delete your account?' }, class: 'btn btn-danger' %>
+      <p>email：<%= @user.email %></p>
+      <%= link_to 'Edit', edit_user_path(@user), class: "btn btn-primary" %>
+      <%= link_to 'Delete', @user, method: :delete, data: { confirm: 'Are you sure you want to delete your account?' }, class: 'btn btn-danger' %>
   </div>
 </div>
 
