--- a/app/views/tourist_spots/_form.html.erb
+++ b/app/views/tourist_spots/_form.html.erb
@@ -37,7 +37,8 @@
 
   <div class="field mt-3">
     <%= form.label :images, "Images (up to 5)" %>
-    <%= form.file_field :images, multiple: true %>
+    <%= form.file_field :images, multiple: true, accept: 'image/*', id: 'tourist_spot_images' %>
+    <div id="preview-zone" class="mt-3"></div> 
   </div>
   
   <div class="d-flex justify-content-center mt-3">
