--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -50,6 +50,7 @@ html, body{
   display: flex;
   align-items: center; /* 垂直方向の中央揃え */
   justify-content: center; /* 水平方向の中央揃え */
+  z-index: 1000; /* フッターのz座標を高く設定 */
 }
 
 .footer p {
@@ -129,4 +130,62 @@ margin-bottom: 30px;
   font-size: 20px;
   color: red;
   cursor: pointer;
+}
+
+/*カード*/
+.custom-card {
+  width: 60%;
+  margin:auto;
+  border-radius: 20px;
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
+  margin-bottom: 1rem; /* マージンを調整 */
+  background-color: white;
+}
+
+.custom-card-body {
+  padding: 20px;
+}
+
+.custom-card-title {
+  font-size: 1.25rem;
+  font-weight: bold;
+  margin-bottom: 8px;
+  display: flex;
+  align-items: center;
+}
+
+.custom-card-text {
+  font-size: 1rem;
+  line-height: 1.5;
+}
+
+.custom-icon {
+  color: #17a2b8; /* アイコンの色を青色に設定 */
+  margin-right: 1.5rem; /* マージンを調整 */
+}
+
+.form-label{
+  font-size: large;
+  font-weight: bold;
+}
+
+/*並び替えボタンの装飾*/
+.btn-white {
+  background-color: white;
+  color: #495057;
+  padding: 6px;
+  border-radius: 10px; 
+  font-size: small;
+  border: 1px solid;
+  text-decoration: none;
+}
+
+.btn-white:hover {
+  background-color: #e9ecef;
+  color: #212529;
+  padding: 6px;
+  border-radius: 10px; 
+  font-size: small;
+  border: solid;
+  text-decoration: none;
 }
