--- a/app/views/tourist_spots/show.html.erb
+++ b/app/views/tourist_spots/show.html.erb
@@ -57,12 +57,12 @@
   <% if current_user.id == @tourist_spot.user_id%>
     <div class="mt-4">
       <%= link_to 'Edit', edit_tourist_spot_path(@tourist_spot), class: 'btn btn-primary' %>
-      <%= link_to 'Back to List', tourist_spots_path, class: 'btn btn-secondary' %>
       <%= link_to 'Delete', @tourist_spot, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
     </div>
   <% end %>
 </div>
 
+<!--モーダルのjs-->
 <script>
   const buttonOpen = document.getElementById("modalOpen");
   const buttonClose = document.querySelector(".modalClose");
