--- a/app/views/tourist_spots/edit.html.erb
+++ b/app/views/tourist_spots/edit.html.erb
@@ -40,11 +40,6 @@
         <%= form.text_area :explanation, class: 'form-control' %>
       </div>
       
-      <!--<div class="field mt-3">-->
-      <!--  <%= form.label :images, "Images (up to 5)" %>-->
-      <!--  <%= form.file_field :images, multiple: true, accept: 'image/*', id: 'tourist_spot_images' %>-->
-      <!--  <div id="preview-zone" class="mt-3"></div> -->
-      <!--</div>-->
       
       <div class="field mt-3">
         <%= form.label :images, "Current Images", class: "mb-2"%>
@@ -66,6 +61,7 @@
         
           <%= form.label :new_images, "Add New Images" %>
           <%= form.file_field :images, multiple: true, accept: 'image/*', id: 'tourist_spot_images' %>
+          <div id="preview-zone" class="mt-3"></div> 
       </div>
       
       <div class="d-flex justify-content-center mt-3 mb-5">
@@ -73,4 +69,3 @@
       </div>
     <% end %>
   </div>
-  
