--- a/app/views/tourist_spots/index.html.erb
+++ b/app/views/tourist_spots/index.html.erb
@@ -7,16 +7,16 @@
   
     <div class="field">
       <%= form.label :address, "Search by area" %>
-      <%= form.text_field :address, class: 'form-control', placeholder: 'Enter Area' %>
+      <%= form.text_field :address, value: params[:address], class: 'form-control', placeholder: 'Enter Area' %>
     </div>
     
     <div class="field mt-3 select-dropdown">
       <%= form.label :prefecture %>
-      <%= form.collection_select :prefecture_id, Prefecture.all, :id, :prefecture, { prompt: "Select a Prefecture" }, { class: 'form-select' } %>
+      <%= form.collection_select :prefecture_id, Prefecture.all, :id, :prefecture, { prompt: "Select a Prefecture", selected: params[:prefecture_id] }, { class: 'form-select' } %>
     </div>
     
-    <div class="d-flex mt-3">
-      <div class="mb-3 me-3">
+    <div class="row mt-3">
+      <div class="col-sm-6 mb-3">
         <%= form.label :category, "Category", class: "form-label" %></br>
         <% Category.all.each do |category| %>
           <div class="form-check form-check-inline">
@@ -26,7 +26,7 @@
         <% end %>
       </div>
   
-      <div class="mb-3">
+      <div class="col-sm-6 mb-3">
         <%= form.label :usage_scene, "Usage Scene", class: "form-label"%></br>
         <% UsageScene.all.each do |usage_scene| %>
           <div class="form-check form-check-inline">
@@ -43,13 +43,15 @@
   
   <% end %>
   
-  <div class="d-flex mb-2 mt-5" style="width:60%; margin:auto;">
-    <%= link_to search_path(params.to_unsafe_h.merge(sort: 'newest')), class: "btn-white me-2", role: "button" do %>
-      <i class="fa fa-calendar"></i> Sort by Newest
-    <% end %>
-    <%= link_to search_path(params.to_unsafe_h.merge(sort: 'highest_rating')), class: "btn-white", role: "button" do %>
-      <i class="fa fa-star"></i> Sort by Highest Rating
-    <% end %>
+  <div class="row mb-2 mt-5 justify-content-center">
+    <div class="col-md-10 d-flex">
+      <%= link_to search_path(params.to_unsafe_h.merge(sort: 'newest')), class: "btn-white me-2", role: "button" do %>
+        <i class="fa fa-calendar"></i> Newest
+      <% end %>
+      <%= link_to search_path(params.to_unsafe_h.merge(sort: 'highest_rating')), class: "btn-white", role: "button" do %>
+        <i class="fa fa-star"></i> Top Rated
+      <% end %>
+    </div>
   </div>
 
   
