--- a/app/views/users/likes.html.erb
+++ b/app/views/users/likes.html.erb
@@ -17,8 +17,8 @@
 <div style="width: 45%; margin: auto;">
   <ul class="nav nav-tabs nav-justified mb-4 mt-2">
     <li class="nav-item"><a href="<%= user_path(@user) %>" class="nav-link <%= 'active' if current_page?(user_path(@user)) %>">Spots</a></li>
-    <li class="nav-item"><a href="#" class="nav-link <%= 'active' if current_page?() %>">Reviews</a></li>
+    <li class="nav-item"><a href="" class="nav-link <%= 'active' if current_page?() %>">Reviews</a></li>
     <li class="nav-item"><a href="<%= likes_user_path(@user) %>" class="nav-link <%= 'active' if current_page?(likes_user_path(@user)) %>">Favorites</a></li>
   </ul>
-  <%= render 'tourist_spots/tourist_spots', tourist_spots: @tourist_spots %>
+  <%= render 'tourist_spots/tourist_spots', tourist_spots: @likes %>
 </div>
