--- a/app/views/tourist_spots/show.html.erb
+++ b/app/views/tourist_spots/show.html.erb
@@ -65,6 +65,8 @@
   <% end %>
 </div>
 
+<!--レビュー一覧とレビュー作成ボタンを作成-->
+
 <!--モーダルのjs-->
 <script>
   const buttonOpen = document.getElementById("modalOpen");
