--- a/app/views/tourist_spots/_tourist_spots.html.erb
+++ b/app/views/tourist_spots/_tourist_spots.html.erb
@@ -26,5 +26,5 @@
   </ul>
   <%== pagy_bootstrap_nav(@pagy) %>
 <% else %>
-  <p class="text-muted">You have not posted anything yet.</p>
+  <p class="text-muted"><%= empty_message %></p>
 <% end %>
