--- a/app/views/users/reviews.html.erb
+++ b/app/views/users/reviews.html.erb
@@ -20,5 +20,5 @@
     <li class="nav-item"><a href="<%= reviews_user_path(@user) %>" class="nav-link <%= 'active' if current_page?(reviews_user_path(@user)) %>">Reviews</a></li>
     <li class="nav-item"><a href="<%= likes_user_path(@user) %>" class="nav-link <%= 'active' if current_page?(likes_user_path(@user)) %>">Favorites</a></li>
   </ul>
-  <%= render 'tourist_spots/tourist_spots', tourist_spots: @tourist_spots, empty_message: "You have not posted any tourist spots yet." %>
+  <%= render 'reviews/reviews', reviews: @reviews %>
 </div>
